Provide debian support for QtXML patterns module.

--- a/debian/control
+++ b/debian/control
@@ -27,7 +27,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
 	 pyside-qt4-svg (>= ${binary:Version}),
 	 pyside-qt4-uitools (>= ${binary:Version}),
 	 pyside-qt4-webkit (>= ${binary:Version}),
-	 pyside-qt4-xml (>= ${binary:Version})
+	 pyside-qt4-xml (>= ${binary:Version}),
+	 pyside-qt4-xmlpatterns (>= ${binary:Version})
 Description: Python bindings for Qt4 (big metapackage)
  Python bindings for Qt4 framework. This is a metapackage for all modules.
 
@@ -48,6 +49,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
 	 pyside-qt4-uitools (>= ${binary:Version}) |
 	 pyside-qt4-webkit (>= ${binary:Version}) |
 	 pyside-qt4-xml (>= ${binary:Version}) |
+	 pyside-qt4-xmlpatterns (>= ${binary:Version}) |
 	 libpyside0 (>= ${binary:Version})
 Description: Python bindings for Qt 4 (debug symbols)
  Qt is a cross-platform C++ application framework. Qt's primary feature
@@ -207,3 +209,13 @@ Description: Qt 4 XML module - Python bindings
  is its rich set of widgets that provide standard GUI functionality.
  .
  This package provides Python bindings for the QtXml module.
+
+Package: pyside-qt4-xmlpatterns
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
+Provides: ${python:Provides}
+Description: Qt 4 XML patterns module - Python bindings
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package provides Python bindings for the QtXmlPatterns module.
